icon and name is updated

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="" />
+  <link rel="icon" type="image/png" sizes="120x120" href="icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Web site is related to Chating" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>React App</title>
+
+  <title>BoTing Chat APP</title>
 </head>
 
 <body>
